--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,7 +3,7 @@
 <!--
 	Name: Jacob Bensen
 	Date Created: 3/25/19
-	Most recent revision:
+	Most recent revision: 3/26/19
 -->
 
 <html lang="en">
@@ -29,20 +29,58 @@
 			<section>
 				<article id="about-me">
 					<h2><em>About Me</em></h2>
-					<p>My name is Jake.</p>
-					<p>I live in Roseville, MN.</p>
+					<a href="images/self.jpg"><img src="images/self.jpg" alt="Photo of Jake" width="250"/></a>
+					<p>My name is Jake. I live in Roseville, MN. I lived in Texas for seven years.</p>
+					<p>I graduated from Sam Houston State University with a BS in Chemistry. I learned Python in college and used it for my final project in my advanced integrated laboratory course.</p>
 				</article>
 
 				<article id="past-experiences">
 					<h2><em>Past Experiences</em></h2>
-					<p>I graduated from Sam Houston State University with a BS in Chemistry.</p>
-					<p>I learned Python in college and used it to create a linear regression algorithm.</p>
+					<a href="images/nerdlife.jpg"><img src="images/nerdlife.jpg" alt="Photo of Jake in school" width="250"/></a>
+					<table>
+						<caption>Experience History</caption>
+						<tr>
+							<th>Time Period</th>
+							<th>Title</th>
+							<th>Company/Institution</th>
+						</tr>
+						<tr>
+							<td>Oct '18 - Present</td>
+							<td>Lab Inventory Specialist</td>
+							<td>Bio-Techne</td>
+						</tr>
+						<tr>
+							<td>July '18 - Oct '18</td>
+							<td>Lab Assistant</td>
+							<td>Kelly Services</td>
+						</tr>
+						<tr>
+							<td>Aug '13 - May '18</td>
+							<td>Chemistry Student</td>
+							<td>Sam Houston State University</td>
+						</tr>
+					</table>
 				</article>
 
 				<article id="hobbies">
 					<h2><em>Hobbies</em></h2>
-					<p>I enjoy learning new things.</p>
-					<p>I like working with and building computers.</p>
+					<a href="images/myPC.jpg"><img src="images/myPC.jpg" alt="Photo of new computer build" width="250"/></a>
+					<ul>
+						<li>Indoors</li>
+						<ol>
+							<li>Programming</li>
+							<li>Building Computers</li>
+							<li>Video Games</li>
+							<li>Cooking</li>
+						</ol>
+						<li>Outdoors</li>
+						<ol>
+							<li>Fishing</li>
+							<li>Snowboarding</li>
+							<li>Boating</li>
+							<li>Travel</li>
+						</ol>
+					</ul>
 				</article>
 			</section>
 
@@ -53,3 +91,5 @@
 		</main>
 	</body>
 </html>
+
+
