bootstrap version added

--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -3,12 +3,13 @@
 <!--
 	Name: Jacob Bensen
 	Date Created: 3/25/19
-	Most recent revision: 3/26/19
+	Most recent revision: 3/28/19
 -->
 
 <html lang="en">
 	<head>
 		<title>Contact Jacob</title>
+		<link href="styles/main.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
 		<main>
@@ -17,14 +18,14 @@
 				<h1>Contact Me</h1>
 			</header>
 
-			<hr />
 			<nav>
 				<p><a href="index.html">Home</a></p>
 				<p><a href="projects.html">Projects</a></p>
 				<p><a href="contact.html">Contact</a></p>
 				<p><a href="testimonials.html">Testimonials</a></p>
 			</nav>
-			<hr />
+
+			<div class="clear-float"></div>
 
 			<section>
 				<h2>Information Request</h2>
@@ -65,10 +66,10 @@
 					<textarea id="info" name="info"></textarea>
 					<input type="submit" name="submit" value="Submit">
 				</form>
+				<br />
 			</section>
 
 			<footer>
-				<hr />
 				<p>&copy; 2020 Jacob Bensen. All rights reserved.</p>
 			</footer>
 		</main>
