--- a/portfolio/testimonials.html
+++ b/portfolio/testimonials.html
@@ -9,6 +9,7 @@
 <html lang="en">
 	<head>
 		<title>Jacob's Testimonials</title>
+		<link href="styles/main.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
 		<main>
@@ -17,21 +18,25 @@
 				<h1>Testimonials</h1>
 			</header>
 
-			<hr />
 			<nav>
 				<p><a href="index.html">Home</a></p>
 				<p><a href="projects.html">Projects</a></p>
 				<p><a href="contact.html">Contact</a></p>
 				<p><a href="testimonials.html">Testimonials</a></p>
 			</nav>
-			<hr />
+
+			<div class="clear-float"></div>
 
 			<section>
-				
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 			</section>
 
 			<footer>
-				<hr />
 				<p>&copy; 2020 Jacob Bensen. All rights reserved.</p>
 			</footer>
 		</main>
