--- a/luckySevens/index.html
+++ b/luckySevens/index.html
@@ -15,40 +15,18 @@
 
 		<!-- Bootstrap CDN copied from https://getbootstrap.com/docs/4.1/getting-started/download/ -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-		<link href="styles/main.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
 		<div class="container">
-
-			<header class="jumbotron">
-				<h1>Jacob Bensen</h1>
-				<h2 class="font-italic">Programming Student</h2>
-				<h3 class="text-right mt-5">Experience with HTML, CSS, Javascript, and Python!</h3>
-			</header>
-
-			<nav>
-				<a class="btn badge-pill" href="index.html">Home</a>
-				<a class="btn badge-pill" href="contact.html">Contact Me</a>
-				<a class="btn badge-pill" href="projects.html">Projects</a>
-
-			</nav>
-
-			<div class="row">
-				<div class="col-lg-3 col-md">
-					<img src="images/myPC.jpg" alt="Photo of my new PC build" class="img-fluid" />
-				</div>
-
-				<div class="col-lg-9 col-md">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua.</p>
-				</div>
+			
+			<div class="col-lg-3">
+				<!-- div for picture -->
 			</div>
+
+			<div class="col-lg-9">
+				<!-- div for text -->
+			</div>
+
 		</div>
 
 		<!-- CDN links copied from https://getbootstrap.com/docs/4.1/getting-started/introduction/ -->
