--- a/luckySevens/index.html
+++ b/luckySevens/index.html
@@ -11,7 +11,8 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-		<title>Bootstrap Sample Page</title>
+		<title>Lucky Sevens</title>
+		<script type="text/javascript" src="luckySevens.js"></script>
 
 		<!-- Bootstrap CDN copied from https://getbootstrap.com/docs/4.1/getting-started/download/ -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -19,13 +20,19 @@
 	<body>
 		<div class="container">
 			
-			<div class="col-lg-3">
-				<!-- div for picture -->
+			<div class="row">
+				<h2>Lucky Sevens</h2>
 			</div>
 
-			<div class="col-lg-9">
-				<!-- div for text -->
-			</div>
+			<div class="row">
+				<div col-4>
+					<label for="startingBet">Starting Bet:</label>
+				</div>
+				<div col-4>
+					<input type="text" name="startingBet" value="0.00">
+				</div>
+
+		</div>
 
 		</div>
 
