--- a/luckySevens/index.html
+++ b/luckySevens/index.html
@@ -14,27 +14,108 @@
 		<title>Lucky Sevens</title>
 		<script type="text/javascript" src="luckySevens.js"></script>
 
+		<style>
+			body{
+				padding: 20px;
+			}
+			#title, #moneyLine{
+				text-align: center;
+				width: 100%;
+				padding: 10px;
+				font-weight: bold;
+			}
+			#playBtn{
+				margin: 20px 0px;
+				text-align: center;
+			}
+			.btn{
+				background-color: white;
+				outline: thick solid black;
+			}
+			input{
+				width: 100%;
+				border: thick solid black;
+				width: 80px;
+				height: 35px;
+				text-align: center;
+				font-weight: bold;
+			}
+			table {
+				width: 100%;
+			}
+			td {
+				padding: 5px;
+				vertical-align: center;
+				border: thick solid black;
+				font-weight: bold;
+			}
+			#results{
+				border-top: thick solid black;
+			}
+			#error{
+				color: red;
+				padding-top: 12px;
+			}
+		</style>
+
 		<!-- Bootstrap CDN copied from https://getbootstrap.com/docs/4.1/getting-started/download/ -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	</head>
 	<body>
 		<div class="container">
-			
 			<div class="row">
-				<h2>Lucky Sevens</h2>
+				<div class="col-12" id="title">
+					<h2>Lucky Sevens</h2>
+				</div>
 			</div>
 
 			<div class="row">
-				<div col-4>
+				<div class="col-12" id="moneyLine">
 					<label for="startingBet">Starting Bet:</label>
+					<input id="money" type="number" name="startingBet" placeholder="$$$" onchange="addMoney()">
 				</div>
-				<div col-4>
-					<input type="text" name="startingBet" value="0.00">
+			</div>
+			<div class="row">
+				<div class="col-5"></div>
+				<div class="col-2" id="playBtn">
+					<button class="btn" onclick="playGame();"><b>Play</b></button>
 				</div>
-
+				<div class="col-5" id="error" style="display: none;">
+					<i>Must enter a number value greater than zero!!!</i>
+				</div>
+			</div>
+			<div id="results" style="display: none;">
+				<div class="row">
+					<div class="col-12" id="title">
+						<h2>Results</h2>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-2"></div>
+					<div class="col-8">
+						<table>
+							<tr>
+								<td>Starting Bet</td>
+								<td>$<span id="startBet"></span></td>
+							</tr>
+							<tr>
+								<td>Total Rolls Before Going Broke</td>
+								<td><span id="rollCount"></span></td>
+							</tr>
+							<tr>
+								<td>Highest Amount Won</td>
+								<td>$<span id="maxMoney"></span></td>
+							</tr>
+							<tr>
+								<td>Roll Count at Highest Amount Won</td>
+								<td><span id="maxMoneyRoll"></span></td>
+							</tr>
+						</table>
+					</div>
+				</div>
+			</div>
 		</div>
 
-		</div>
 
 		<!-- CDN links copied from https://getbootstrap.com/docs/4.1/getting-started/introduction/ -->
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
